--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "script.js",
     "scripts": {
         "build-w": "npx tsc -w",
-        "build": "npx tsc"
+        "build": "npx tsc",
+        "dev": "live-server"
     },
     "keywords": [],
     "author": "",
